[gd_scene load_steps=2 format=3 uid="uid://d3yqj8v4k7l5n"]

[ext_resource type="Script" path="res://src/ui/FeedbackView.gd" id="1_script"]

[node name="FeedbackView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.95, 0.95, 0.97, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ContentVBox" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="HeaderLabel" type="Label" parent="MarginContainer/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 32
text = "Solution Review"
horizontal_alignment = 1

[node name="FeedbackLabel" type="RichTextLabel" parent="MarginContainer/ScrollContainer/ContentVBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/default_color = Color(0.1, 0.1, 0.1, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
fit_content = true

[node name="StepsHeader" type="Label" parent="MarginContainer/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "Your Steps:"

[node name="StepsContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="CorrectSolutionContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/ContentVBox"]
visible = false
layout_mode = 2

[node name="CorrectHeader" type="Label" parent="MarginContainer/ScrollContainer/ContentVBox/CorrectSolutionContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.6, 0.2, 1)
theme_override_font_sizes/font_size = 24
text = "Correct Approach:"

[node name="CorrectLabel" type="RichTextLabel" parent="MarginContainer/ScrollContainer/ContentVBox/CorrectSolutionContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
fit_content = true

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="RetryButton" type="Button" parent="MarginContainer/ScrollContainer/ContentVBox/ButtonsContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Try Similar Problem"

[node name="ContinueButton" type="Button" parent="MarginContainer/ScrollContainer/ContentVBox/ButtonsContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "New Topic"
